--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 
         <div class="inner-container-a">
             <h1>While, do-while, for e foreach</h1>
-            <button onclick="exibirFrutasWhile()">While</button>
-            <button onclick="exibirFrutasDoWhile()">Do-while</button>
-            <button onclick="exibirFrutasFor()">For</button>
-            <button onclick="exibirFrutasForEach()">Foreach</button>
+            <button class="loop" onclick="exibirFrutasWhile()">While</button>
+            <button class="loop" onclick="exibirFrutasDoWhile()">Do-while</button>
+            <button class="loop" onclick="exibirFrutasFor()">For</button>
+            <button class="loop" onclick="exibirFrutasForEach()">Foreach</button>
         </div>
 
         <div class="inner-container-b">
             <h1>Operações matemáticas</h1>
-            <button onclick="quadrado()">Clique para exibir o quadrado no número 4</button>
-            <button onclick="raizQuadrada()">Clique para exibir a raiz Quadrada do número 9</button>
-            <button onclick="inteiro()">Clique para exibir o número inteiro (9/2 = 4,5)</button>
-            <button onclick="arredondaParaCima ()">Clique para exibir arredonda para cima (5/2 = 2,5)</button>
-            <button onclick="arredondaParaBaixo()">Clique para exibir arredonda para baixo (9/7 = 1,28)</button>
+            <button class="math" onclick="quadrado()">Clique para exibir o quadrado no número 4</button>
+            <button class="math" onclick="raizQuadrada()">Clique para exibir a raiz Quadrada do número 9</button>
+            <button class="math" onclick="inteiro()">Clique para exibir o número inteiro (9/2 = 4,5)</button>
+            <button class="math" onclick="arredondaParaCima ()">Clique para exibir arredonda para cima (5/2 = 2,5)</button>
+            <button class="math" onclick="arredondaParaBaixo()">Clique para exibir arredonda para baixo (9/7 = 1,28)</button>
         </div>
 
         <div class="inner-container-c">
             <h1>Tabuada</h1>
             <h2>Clique no botão abaixo para exibir a tabuada do número 2</h2>
-            <button onclick="tabuada()">Exibir</button>
+            <button class="tabuada" onclick="tabuada()">Exibir</button>
         </div>
 
     </div>
