--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="container-funcoes">
 
         <div class="inner-container-a">
-            <h1>While, do-while, for e foreach</h1>
+            <h1>Loops: while, do-while, for e foreach</h1>
+            <h3>Clique no botão abaixo para exibir o loop</h3>
             <button class="loop" onclick="exibirFrutasWhile()">While</button>
             <button class="loop" onclick="exibirFrutasDoWhile()">Do-while</button>
             <button class="loop" onclick="exibirFrutasFor()">For</button>
@@ -29,17 +30,18 @@
         </div>
 
         <div class="inner-container-b">
-            <h1>Operações matemáticas</h1>
-            <button class="math" onclick="quadrado()">Clique para exibir o quadrado no número 4</button>
-            <button class="math" onclick="raizQuadrada()">Clique para exibir a raiz Quadrada do número 9</button>
-            <button class="math" onclick="inteiro()">Clique para exibir o número inteiro (9/2 = 4,5)</button>
-            <button class="math" onclick="arredondaParaCima ()">Clique para exibir arredonda para cima (5/2 = 2,5)</button>
-            <button class="math" onclick="arredondaParaBaixo()">Clique para exibir arredonda para baixo (9/7 = 1,28)</button>
+            <h1>Operações</h1>
+            <h3>Clique no botão abaixo para exibir as operações</h3>
+            <button class="math" onclick="quadrado()">Quadrado no número 4</button>
+            <button class="math" onclick="raizQuadrada()">Raiz quadrada do número 9</button>
+            <button class="math" onclick="inteiro()">Número inteiro da operação 9/2 (resultado = 4,5)</button>
+            <button class="math" onclick="arredondaParaCima ()">Arredonda o resultado para cima (5/2 = 2,5)</button>
+            <button class="math" onclick="arredondaParaBaixo()">Arredonda o resultado para baixo (9/7 = 1,28)</button>
         </div>
 
         <div class="inner-container-c">
             <h1>Tabuada</h1>
-            <h2>Clique no botão abaixo para exibir a tabuada do número 2</h2>
+            <h3>Clique no botão abaixo para exibir a tabuada do número 2</h3>
             <button class="tabuada" onclick="tabuada()">Exibir</button>
         </div>
 
